@@ -24,8 +24,8 @@ public class ProvinceImplService extends CommonService {
 
 	public SelectResponseDto getSelectProvince(FilterDto filter) throws Exception {
 		Page<ProvinceEntity> province = provinceRepo.findAll(ProvinceSpecification.getSelect(filter.getKeyword()), page(filter.getOrder(), filter.getOffset(), filter.getLimit()));
-		SelectResponseDto response = new SelectResponseDto();
-		response.setTotalFiltered(new Long(province.getContent().size()));
+		final SelectResponseDto response = new SelectResponseDto();
+		response.setTotalFiltered(Long.valueOf(province.getContent().size()));
 		response.setTotalRecord(provinceRepo.count(ProvinceSpecification.getSelect(filter.getKeyword())));
 		province.getContent().forEach(value -> {
 			response.getData().add(new SelectDto(value.getProvinceName(), value.getProvinceCode(), !value.isActive(), null));
